# omill

./: .gitignore  CMakeLists.txt  README.md  vmcmd.txt
cmake/: Qt6AutoFetch.cmake  options.cmake
include/omill/: OllvmAttrs.h  Omill.h
include/omill/Analysis/: SegmentsAA.h  VMHandlerGraph.h
include/omill/BC/: BlockLifter.h  BlockLifterAnalysis.h  TraceLifter.h
include/omill/Passes/: ControlFlowUnflattener.h  DeadStateStoreDSE.h  IndirectCallResolver.h  IterativeBlockDiscovery.h  IterativeTargetResolution.h  JumpTableConcretizer.h  JunkInstructionRemover.h  KnownIndexSelect.h  MemoryCoalesce.h  MergeBlockFunctions.h  PartialOverlapDSE.h  PointersHoisting.h  StackConcretization.h  SynthesizeFlags.h  VMDispatchResolution.h  VMHashElimination.h
include/omill/Tools/: LiftRunContract.h
include/omill/Utils/: StateFieldMap.h
lib/: CMakeLists.txt  Pipeline.cpp
lib/Analysis/: SegmentsAA.cpp  VMHandlerGraph.cpp
lib/Arch/: ArchABI.cpp
lib/BC/: BlockLifter.cpp  BlockLifterAnalysis.cpp  TraceLifter.cpp
lib/Passes/: ControlFlowUnflattener.cpp  DeadStateStoreDSE.cpp  EliminateStateStruct.cpp  IndirectCallResolver.cpp  IterativeBlockDiscovery.cpp  IterativeTargetResolution.cpp  JumpTableConcretizer.cpp  JunkInstructionRemover.cpp  KnownIndexSelect.cpp  LowerRemillIntrinsics.cpp  MemoryCoalesce.cpp  MergeBlockFunctions.cpp  MergeBytePhis.cpp  OptimizeState.cpp  PartialOverlapDSE.cpp  PassRegistry.cpp  PointersHoisting.cpp  RecoverAllocaPointers.cpp  RecoverFunctionSignatures.cpp  RecoverStackFrame.cpp  ResolveForcedExceptions.cpp  RewriteLiftedCallsToNative.cpp  SimplifyVectorReassembly.cpp  StackConcretization.cpp  SynthesizeFlags.cpp  VMDispatchResolution.cpp  VMHandlerInliner.cpp  VMHashElimination.cpp
lib/Tools/: LiftRunContract.cpp
lib/Utils/: StateFieldMap.cpp
test_obf/: CMakeLists.txt
test_obf/src/: deobf_roundtrip_funcs.cpp  obf_algo_funcs.cpp  ollvm_vec_const_mix.cpp
tests/: CMakeLists.txt
tests/e2e/: BlockLifterTest.cpp  DeobfuscationRoundTripTest.cpp  DeobfuscationTest.cpp  LiftAndOptFixture.cpp  LiftAndOptFixture.h  OLLVMObfAlgorithmsTest.cpp
tests/unit/: BinaryMemoryMapTest.cpp  BogusControlFlowObfTest.cpp  ControlFlowUnflattenerTest.cpp  DeadStateStoreDSETest.cpp  IndirectCallResolverTest.cpp  InlineJumpTargetsTest.cpp  IterativeBlockDiscoveryTest.cpp  IterativeTargetResolutionTest.cpp  JumpTableConcretizerTest.cpp  JunkInstructionRemoverTest.cpp  KnownIndexSelectTest.cpp  LiftRunContractTest.cpp  LiftedNamesTest.cpp  LowerRemillIntrinsicsTest.cpp  MemoryCoalesceTest.cpp  MergeBlockFunctionsTest.cpp  OLLVMJITTest.cpp  OmillLiftEventIntegrationTest.cpp  OpaquePredicatesObfTest.cpp  OptimizeStateTest.cpp  PartialOverlapDSETest.cpp  PointersHoistingTest.cpp  ResolveAndLowerControlFlowTest.cpp  ResolveForcedExceptionsTest.cpp  RewriteLiftedCallsToNativeTest.cpp  SegmentsAATest.cpp  SimplifyVectorReassemblyTest.cpp  StackConcretizationTest.cpp  StateFieldAccessAnalysisTest.cpp  SynthesizeFlagsTest.cpp
tools/ollvm-obf/: BogusControlFlow.cpp  BogusControlFlow.h  CMakeLists.txt  OpaquePredicates.cpp  OpaquePredicates.h  Vectorize.cpp  main.cpp
tools/ollvm-plugin/: CMakeLists.txt  OllvmPlugin.cpp
tools/omill-lift/: CMakeLists.txt  main.cpp
tools/omill-lift-ui/: CMakeLists.txt  main.cpp
tools/omill-opt/: main.cpp
